# ninja-narrador

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build_gui.ps1  config.example.toml  install.ps1  interface.py  pyproject.toml  requirements-cuda.txt  requirements-dev.txt  requirements.txt
.github/workflows/: quality.yml
docs/: architecture.md
input_texts/: exemplo.txt
ninja_narrator/: __init__.py  __main__.py  audio.py  cli.py  config.py  domain.py  gui_app.py  io_utils.py  service.py
ninja_narrator/backends/: __init__.py  base.py  xtts.py
scripts/: capture_screenshots.ps1
tests/: test_cli.py  test_config.py  test_domain.py  test_io_utils.py  test_service.py  test_xtts_backend.py
